--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,11 @@ body {
   height: 100vh;
 }
 
+.title-list {
+  text-align: center;
+  margin-bottom: 30px;
+}
+
 .box {
   background-color: white;
   border-radius: 15px;
@@ -87,7 +92,6 @@ body {
   color: white;
   border-radius: 20px;
   padding: 5px;
-  width: 20%;
 }
 
 .btn-primary:hover {
